# batch-job-for-machine-learning

./: .dockerignore  Dockerfile  README.md  pyproject.toml
src/: train_mnist.py
