[tool.poetry]
name = "batch-job-for-machine-learning"
version = "0.1.0"
description = ""
authors = ["hayata-yamamoto <hayata.yamamoto.work@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Pillow = "^7.1.1"
keras = "^2.3.1"
tensorflow = "^2.1.0"
tensorflow-estimator = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
